// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Movement test suite should generate a basic movement 1`] = `
Object {
  "events": Array [
    Object {
      "key": "D",
      "position": "VI",
      "root": "D",
      "scaleName": "Aeolian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "II",
      "root": "G",
      "scaleName": "Dorian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "I",
      "root": "F",
      "scaleName": "Ionian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "II",
      "root": "G",
      "scaleName": "Dorian",
      "type": "mode",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 1920,
      "key": Object {
        "root": "D",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "time": 0,
    },
    Object {
      "dur": 1920,
      "key": Object {
        "root": "G",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "time": 1920,
    },
    Object {
      "dur": 1920,
      "key": Object {
        "root": "F",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 3840,
    },
    Object {
      "dur": 1920,
      "key": Object {
        "root": "G",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "time": 5760,
    },
  ],
}
`;

exports[`A Movement test suite should generate a basic movement in 3/4 1`] = `
Object {
  "events": Array [
    Object {
      "key": "D",
      "position": "VI",
      "root": "D",
      "scaleName": "Aeolian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "II",
      "root": "G",
      "scaleName": "Dorian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "I",
      "root": "F",
      "scaleName": "Ionian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "II",
      "root": "G",
      "scaleName": "Dorian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "IV",
      "root": "Bb",
      "scaleName": "Lydian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "IV",
      "root": "Bb",
      "scaleName": "Lydian",
      "type": "mode",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 480,
      "key": Object {
        "root": "D",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "time": 0,
    },
    Object {
      "dur": 480,
      "key": Object {
        "root": "G",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "time": 480,
    },
    Object {
      "dur": 480,
      "key": Object {
        "root": "F",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 960,
    },
    Object {
      "dur": 480,
      "key": Object {
        "root": "G",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "time": 1440,
    },
    Object {
      "dur": 480,
      "key": Object {
        "root": "Bb",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 1920,
    },
    Object {
      "dur": 480,
      "key": Object {
        "root": "Bb",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 2400,
    },
  ],
}
`;

exports[`A Movement test suite should generate a long movement - turn rhythm 1`] = `
Object {
  "events": Array [
    Object {
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "Ionian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "I",
      "root": "D",
      "scaleName": "Ionian",
      "type": "key",
    },
    Object {
      "key": "E",
      "position": "I",
      "root": "E",
      "scaleName": "Ionian",
      "type": "key",
    },
    Object {
      "key": "E",
      "position": "IV",
      "root": "A",
      "scaleName": "Lydian",
      "type": "mode",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 3840,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 0,
    },
    Object {
      "dur": 3840,
      "key": Object {
        "root": "D",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 3840,
    },
    Object {
      "dur": 3840,
      "key": Object {
        "root": "E",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 7680,
    },
    Object {
      "dur": 3840,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 11520,
    },
  ],
}
`;

exports[`A Movement test suite should generate a simple movement - euclidean 1`] = `
Object {
  "events": Array [
    Object {
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "Ionian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "I",
      "root": "D",
      "scaleName": "Ionian",
      "type": "key",
    },
    Object {
      "key": "D",
      "position": "III",
      "root": "F#",
      "scaleName": "Phrygian",
      "type": "mode",
    },
    Object {
      "key": "Ab",
      "position": "III",
      "root": "Ab",
      "scaleName": "Phrygian",
      "type": "key",
    },
    Object {
      "key": "E",
      "position": "III",
      "root": "E",
      "scaleName": "Phrygian",
      "type": "key",
    },
    Object {
      "key": "F#",
      "position": "III",
      "root": "F#",
      "scaleName": "Phrygian",
      "type": "key",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 1440,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 0,
    },
    Object {
      "dur": 1440,
      "key": Object {
        "root": "D",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 1440,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "F#",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 2880,
    },
    Object {
      "dur": 1440,
      "key": Object {
        "root": "Ab",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 3840,
    },
    Object {
      "dur": 1440,
      "key": Object {
        "root": "E",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 5280,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "F#",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 6720,
    },
  ],
}
`;

exports[`A Movement test suite should generate a simple movement - turn rhythm 1`] = `
Object {
  "events": Array [
    Object {
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "Ionian",
      "type": "mode",
    },
    Object {
      "key": "E",
      "position": "I",
      "root": "E",
      "scaleName": "Ionian",
      "type": "key",
    },
    Object {
      "key": "E",
      "position": "IV",
      "root": "A",
      "scaleName": "Lydian",
      "type": "mode",
    },
    Object {
      "key": "E",
      "position": "IV",
      "root": "A",
      "scaleName": "Lydian",
      "type": "mode",
    },
    Object {
      "key": "E",
      "position": "VI",
      "root": "C#",
      "scaleName": "Aeolian",
      "type": "mode",
    },
    Object {
      "key": "C",
      "position": "VI",
      "root": "C",
      "scaleName": "Aeolian",
      "type": "key",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 320,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 0,
    },
    Object {
      "dur": 480,
      "key": Object {
        "root": "E",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 320,
    },
    Object {
      "dur": 1920,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 800,
    },
    Object {
      "dur": 480,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 2720,
    },
    Object {
      "dur": 2880,
      "key": Object {
        "root": "C#",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "time": 3200,
    },
    Object {
      "dur": 1600,
      "key": Object {
        "root": "C",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "time": 6080,
    },
  ],
}
`;
